Update db script, keycloak realm, postman etc
